# medical-data-governance-toolkit

./: .gitignore  README.md  pyproject.toml
config/mapping/: dm_config.yaml  sv_config.yaml
dm_test/: DM.py  DataManager.py  MainApp.py  Utils.py  data_process.py  main.py  process.py
docs/design/: dm_config.xlsx  sv_config.xlsx
requirement/: dependency.dot  flowchart.dot  test.dio  详细项目指南手册.md  项目函数流转图.dio  项目执行操作.md  项目需求说明书.md
sql/: ALK纳入筛选.sql  克罗恩病纳入筛选.sql
src/: all.py  main.py
src/cli/: parser.py  runner.py
src/config/: datasets.json  dm_rawdata_config.xlsx  whole_config.xlsx
src/core/: app.py  dm.py  mapping.py
src/data/: data_processor.py  raw_data.py  task_manager.py
src/domain/: base.py  dm.py
src/utils/: config_service.py  db_utils.py  file_utils.py  mapping.py  proj_base_tool.py
structure/: main.py  架构图.dio
structure/cli/: runner.py
structure/config/: ~$dm_rawdata_config.xlsx  框架.md  项目架构说明书.xlsx
structure/core/: app.py  output_arrange.py
structure/data/: data_processor.py  raw_data.py  task_manager.py
structure/domain/: base.py  dm.py
structure/utils/: config_service.py  config_utils.py  file_utils.py
tests/: test_config_service.py
